--- a/app/src/main/res/layout/activity_drawing.xml
+++ b/app/src/main/res/layout/activity_drawing.xml
@@ -12,7 +12,7 @@
         android:id="@+id/fl_drawing_view_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@drawable/backgroud_drawing_view_layout"
+        android:background="@drawable/background_drawing_view_layout"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -46,7 +46,7 @@
             android:id="@+id/drawing_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="#80FFFFFF"
+            android:background="@android:color/transparent"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
