--- a/app/src/main/res/layout/community.xml
+++ b/app/src/main/res/layout/community.xml
@@ -1,35 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="35dp">
+        android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:text="Motion Diary"
             android:textAlignment="center"
-            android:textSize="25sp"
-            android:text="Motion Diary"/>
+            android:textSize="25sp" />
+
     </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
         android:id="@+id/bar_divider"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@id/toolbar"/>
+        android:layout_below="@id/toolbar"
+        android:orientation="horizontal">
+    </LinearLayout>
 
     <FrameLayout
         android:id="@+id/main_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/bar_divider"
-        android:layout_above="@id/nav_divider"/>
+        android:layout_above="@id/nav_divider">
+    </FrameLayout>
+
 
     <LinearLayout
         android:id="@+id/nav_divider"
