--- a/app/src/main/res/layout/dialog_brush_size.xml
+++ b/app/src/main/res/layout/dialog_brush_size.xml
@@ -5,34 +5,56 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageButton
-        android:id="@+id/ib_small_brush"
+        android:id="@+id/ib_brush_size1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="image"
-        android:src="@drawable/small"
+        android:src="@drawable/brush_size1"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/ib_medium_brush"/>
+        app:layout_constraintBottom_toTopOf="@+id/ib_brush_size4"/>
 
     <ImageButton
-        android:id="@+id/ib_medium_brush"
+        android:id="@+id/ib_brush_size2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="image"
-        android:src="@drawable/medium"
-        app:layout_constraintTop_toBottomOf="@id/ib_small_brush"
+        android:src="@drawable/brush_size2"
+        app:layout_constraintTop_toBottomOf="@id/ib_brush_size1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/ib_large_brush"/>
+        app:layout_constraintBottom_toTopOf="@+id/ib_brush_size3"/>
 
     <ImageButton
-        android:id="@+id/ib_large_brush"
+        android:id="@+id/ib_brush_size3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="image"
-        android:src="@drawable/large"
-        app:layout_constraintTop_toBottomOf="@id/ib_medium_brush"
+        android:src="@drawable/brush_size3"
+        app:layout_constraintTop_toBottomOf="@id/ib_brush_size2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/ib_brush_size4"/>
+
+    <ImageButton
+        android:id="@+id/ib_brush_size4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="image"
+        android:src="@drawable/brush_size4"
+        app:layout_constraintTop_toBottomOf="@id/ib_brush_size3"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/ib_brush_size5"/>
+
+    <ImageButton
+        android:id="@+id/ib_brush_size5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="image"
+        android:src="@drawable/brush_size5"
+        app:layout_constraintTop_toBottomOf="@id/ib_brush_size4"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
