--- a/app/src/main/res/layout/group_timeline.xml
+++ b/app/src/main/res/layout/group_timeline.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -21,11 +23,27 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/recyclerViewtimeline">
+        android:id="@+id/recyclerViewtimeline"
+        android:layout_below="@+id/toolbar">
 
     </androidx.recyclerview.widget.RecyclerView>
 
+    <android.widget.Button
+        android:id="@+id/add_memeber"
+        android:backgroundTint="#3DB7CC"
+        android:background="@drawable/roundbutton"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_margin="10dp"
+        android:clickable="true"
+        android:text="+"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="25sp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"/>
 
 
 
-</LinearLayout>
+
+</RelativeLayout>
