--- a/app/src/main/res/layout/chosen_object_item.xml
+++ b/app/src/main/res/layout/chosen_object_item.xml
@@ -8,7 +8,7 @@
     android:padding="10dp">
 
     <TextView
-        android:id="@+id/objectParentId"
+        android:id="@+id/fullDrawId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
