--- a/app/src/main/res/layout/diary_text.xml
+++ b/app/src/main/res/layout/diary_text.xml
@@ -19,7 +19,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/diaryImg"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_gravity="center"
