--- a/app/src/main/res/layout/timeline_detail.xml
+++ b/app/src/main/res/layout/timeline_detail.xml
@@ -60,5 +60,15 @@
         android:layout_marginLeft="8dp"
         android:text="일기 텍스트"/>
 
+    <TextView
+        android:id="@+id/diary_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="35dp"
+        android:layout_marginLeft="8dp"
+        android:text="날짜"
+        android:textSize="15dp"/>
+
+
 
 </LinearLayout>
