--- a/app/src/main/res/layout/activity_crop.xml
+++ b/app/src/main/res/layout/activity_crop.xml
@@ -8,45 +8,50 @@
     android:background="#BDBDBD"
     tools:context=".CropActivity">
 
-
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/objectRecycler"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            tools:listitem="@layout/chosen_object_item"/>
-
-
-    <Button
-        android:id="@+id/completeBtn"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/objectRecycler"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        app:layout_constraintVertical_bias="0.2"
+        app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/constraintLayout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/completeBtn"
+        tools:listitem="@layout/chosen_object_item"/>
+
+    <android.widget.Button
+        android:id="@+id/completeBtn"
+        android:layout_width="100dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/playAll"
         app:layout_constraintRight_toRightOf="parent"
-        android:text="완료"
-        />
-    <Button
+        app:layout_constraintLeft_toRightOf="@id/objectRecycler"
+        android:text="완료"/>
+
+    <android.widget.Button
         android:id="@+id/playAll"
-        android:layout_width="80dp"
-        android:layout_height="50dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/completeBtn"
+        app:layout_constraintBottom_toTopOf="@id/constraintLayout"
+        app:layout_constraintLeft_toRightOf="@id/objectRecycler"
         app:layout_constraintRight_toRightOf="parent"
-        android:text="모두 재생"
-        />
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="100dp"-->
-<!--        app:layout_constraintTop_toTopOf="parent">-->
-<!--        <ImageView-->
-<!--            android:id="@+id/cropped"-->
-<!--            android:padding="5dp"-->
-<!--            android:background="@color/white"-->
-<!--            android:layout_width="100dp"-->
-<!--            android:layout_height="match_parent"/>-->
-<!--    </LinearLayout>-->
+        android:text="모두 재생"/>
+
+    <!--    <LinearLayout-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="100dp"-->
+    <!--        app:layout_constraintTop_toTopOf="parent">-->
+    <!--        <ImageView-->
+    <!--            android:id="@+id/cropped"-->
+    <!--            android:padding="5dp"-->
+    <!--            android:background="@color/white"-->
+    <!--            android:layout_width="100dp"-->
+    <!--            android:layout_height="match_parent"/>-->
+    <!--    </LinearLayout>-->
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
