--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -24,9 +24,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recyclerViewtimeline"
-        android:layout_below="@+id/toolbar">
-
-    </androidx.recyclerview.widget.RecyclerView>
+        android:layout_below="@+id/toolbar"
+        tools:listitem="@layout/item_timeline"/>
 
     <android.widget.Button
         android:id="@+id/add_memeber"
