--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -123,24 +123,26 @@
         android:id="@+id/info_update"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="30dp"
+        android:layout_marginHorizontal="20dp"
         android:visibility="visible"
         android:text="정보 수정"
+        android:textSize="18sp"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintWidth_percent="0.8"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/speech_bubble"
-        app:layout_constraintBottom_toTopOf="@id/info_user_out"/>
+        app:layout_constraintBottom_toTopOf="@id/info_user_out"
+        app:layout_constraintBaseline_toBaselineOf="@id/info_user_out"/>
 
     <android.widget.Button
         android:id="@+id/info_update_complete"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginHorizontal="20dp"
         android:visibility="gone"
         android:text="수정 완료"
+        android:textSize="18sp"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintWidth_percent="0.8"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -152,6 +154,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="30dp"
+        android:layout_marginHorizontal="20dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@id/info_update"
@@ -166,36 +169,39 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:text="계정 삭제"
+            android:textSize="18sp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@id/change_password"
             app:layout_constraintHeight_percent="1.0"
-            app:layout_constraintWidth_percent="0.3"/>
+            app:layout_constraintWidth_percent="0.33"/>
 
         <android.widget.Button
             android:id="@+id/change_password"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:text="비밀번호 변경"
+            android:textSize="18sp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/delete_account"
             app:layout_constraintRight_toLeftOf="@id/logout"
             app:layout_constraintHeight_percent="1.0"
-            app:layout_constraintWidth_percent="0.3"/>
+            app:layout_constraintWidth_percent="0.33"/>
 
         <android.widget.Button
             android:id="@+id/logout"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:text="로그아웃"
+            android:textSize="18sp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/change_password"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintHeight_percent="1.0"
-            app:layout_constraintWidth_percent="0.3"/>
+            app:layout_constraintWidth_percent="0.33"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
