--- a/app/src/main/res/layout/activity_drawing.xml
+++ b/app/src/main/res/layout/activity_drawing.xml
@@ -57,7 +57,6 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
     <TableLayout
         android:id="@+id/other_buttons"
         android:layout_width="match_parent"
@@ -67,6 +66,80 @@
         app:layout_constraintTop_toBottomOf="@+id/fl_drawing_view_container"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
+
+        <TableRow android:gravity="center">
+            <!-- 팔레트 -->
+            <LinearLayout
+                android:id="@+id/ll_paint_colors"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_margin="2dp"
+                    android:background="@color/red"
+                    android:src="@drawable/pallet_normal"
+                    android:onClick="paintClicked"
+                    android:tag="@color/red" />
+
+                <ImageButton
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_margin="2dp"
+                    android:background="@color/yellow"
+                    android:onClick="paintClicked"
+                    android:src="@drawable/pallet_normal"
+                    android:tag="@color/yellow" />
+
+                <ImageButton
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_margin="2dp"
+                    android:background="@color/green"
+                    android:onClick="paintClicked"
+                    android:src="@drawable/pallet_normal"
+                    android:tag="@color/green" />
+
+                <ImageButton
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_margin="2dp"
+                    android:background="@color/lollipop"
+                    android:onClick="paintClicked"
+                    android:src="@drawable/pallet_normal"
+                    android:tag="@color/lollipop" />
+
+                <ImageButton
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_margin="2dp"
+                    android:background="@color/blue"
+                    android:src="@drawable/pallet_normal"
+                    android:onClick="paintClicked"
+                    android:tag="@color/blue" />
+
+                <ImageButton
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_margin="2dp"
+                    android:background="@color/random"
+                    android:onClick="paintClicked"
+                    android:src="@drawable/pallet_normal"
+                    android:tag="@color/random" />
+
+                <ImageButton
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_margin="2dp"
+                    android:background="@color/black"
+                    android:onClick="paintClicked"
+                    android:src="@drawable/pallet_normal"
+                    android:tag="@color/black" />
+            </LinearLayout>
+        </TableRow>
 
         <TableRow>
             <android.widget.Button
@@ -100,13 +173,6 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:src="@drawable/ic_reset" />
-<!--            <android.widget.Button-->
-<!--                android:id="@+id/ib_gallery"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_weight="1"-->
-<!--                android:textSize="8sp"-->
-<!--                android:text="갤러리"/>-->
             <ImageButton
                 android:id="@+id/ib_undo"
                 android:layout_width="0dp"
@@ -121,15 +187,8 @@
                 android:layout_weight="1"
                 android:src="@drawable/ic_redo"
                 android:visibility="visible" />
-<!--            <android.widget.Button-->
-<!--                android:id="@+id/ib_save"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:layout_weight="1"-->
-<!--                android:textSize="12sp"-->
-<!--                android:text="저장"/>-->
-
         </TableRow>
+
         <TableRow>
             <android.widget.Button
                 android:id="@+id/ib_motion"
@@ -139,6 +198,7 @@
                 android:textSize="12sp"
                 android:text="완료"/>
         </TableRow>
+
     </TableLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
